navigator bar fixed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <meta name="author" content="Tomsa">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Md Mohibul Islam - Mixologist & Restaurant Consultant</title>
@@ -28,7 +29,7 @@
 
         /* Header */
         header {
-            background: rgba(255, 255, 255, 0.1);
+            background: linear-gradient(65deg, #667eea 0%, #764ba2 100%);
             backdrop-filter: blur(10px);
             position: fixed;
             width: 100%;
