--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
             color: var(--subtle-gray);
             border: 2px solid var(--primary-gold);
         }
+        .profile-image{
+          width: 100%;
+          height 400px;
+        }
 
         .about-text {
             font-size: 1.1rem;
@@ -507,7 +511,7 @@
         <h2 class="section-title fade-in">About Me</h2>
         <div class="about-content">
             <div class="about-image fade-in">
-                Professional Photo
+              <img class="profile-image"src="./resources/ProfileImage.png">
             </div>
             <div class="about-text fade-in">
                 <p>Innovative restauranteur and mixologist with over a decade of experience in the food and beverage industry, specializing in crafting innovative cocktails and providing comprehensive consultancy services to restaurants and bars.</p>
