--- a/index.html
+++ b/index.html
@@ -375,6 +375,16 @@
             width: 30px;
         }
 
+        .email-text{
+          text-decoration: none;
+          color: white;
+        }
+
+        .phone-number{
+          text-decoration: none;
+          color: white;
+        }
+
         .contact-form {
             background: var(--glass-bg);
             padding: 2rem;
@@ -677,7 +687,7 @@
                     <div class="contact-icon">📱</div>
                     <div>
                         <strong>Mobile</strong><br>
-                        +358 41319 3113
+                        <a href="tel:+358413193113" class="phone-number">+358 41319 3113</a>
                     </div>
                 </div>
                 
@@ -685,7 +695,7 @@
                     <div class="contact-icon">✉️</div>
                     <div>
                         <strong>Email</strong><br>
-                        mirony@hotmail.my
+                        <a href="mailto:mirony@hotmail.my" class="email-text">M.I. Rony</a>
                     </div>
                 </div>
                 
@@ -693,7 +703,7 @@
                     <div class="contact-icon">💼</div>
                     <div>
                         <strong>LinkedIn</strong><br>
-                        <a href="https://www.linkedin.com/in/mirony007" style="color: var(--primary-gold);">linkedin.com/in/mirony007</a>
+                        <a target="blank" href="https://www.linkedin.com/in/mirony007" style="color: var(--primary-gold);">MIRony007</a>
                     </div>
                 </div>
             </div>
